pkg/lang/testdata/types/invalid/open-twice.ub
t: open(open(object({ a: string })))
